--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://naveen-pandian.github.io/personal_portfolio/client",
+    "homepage": "https://naveen-pandian.github.io/personal_portfolio",
     "name": "vite-template",
     "private": true,
     "version": "0.0.0",
